[package]
name = "lokisay"
version = "0.0.1"
authors = ["mrprofessor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
colored = "2.0.0"
failure = "0.1.8"
exitfailure = "0.5.1"
assert_cmd = "1.0.1"
predicates = "1.0.0"
